更新输出函数

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,12 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+.idea/
+
 /RUNNING_PID
 /logs/
 /project/*-shim.sbt
+/project/.*
 /project/project/
 /project/target/
 /target/
